@@ -1,3 +1,10 @@
+2012-01-13  Lucas Forschler  <lforschler@apple.com>
+
+        Roll-out r99999 (which is 104249 on branch)
+        
+        * platform/KURL.cpp:
+        (WebCore::KURL::init):
+
 2011-1-12  Lucas Forschler  <lforschler@apple.com>
 
     Merge 103082
